# homebox

./: .gitignore  LICENSE  Makefile  README.md
host/admin/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
host/admin/app/: auth.py  backuplib.py  cf_login.py  cloudflare.py  cluster_db.py  cluster_sync.py  clusterlib.py  compose_utils.py  config.py  crypto.py  db.py  deploy.py  dissect.py  github.py  host.py  integrations_lib.py  licenselib.py  main.py  manifest.py  meshlib.py  metrics.py  migrate.py  models.py  monitor.py  nodeprovision.py  orgs.py  targetslib.py  urls.py  vaultlib.py  webhooks_lib.py
host/admin/app/migrations/: env.py
host/admin/app/routes/: auth.py  cluster.py  (+18 more)
host/admin/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
host/admin/tests/: test_account_flow.py  test_aws_app_runner.py  test_awslib.py  test_cloud_integrations.py  test_cloudflare_containers.py  test_cloudflare_pages.py  test_cloudflare_token_scopes.py  test_cluster_db_lolor.py  test_cluster_sync.py  test_db_vm_targets.py  test_directives.py  test_domain_override.py  test_domain_usage.py  test_gcp_cloud_run.py  test_gcplib.py  test_migrations.py  test_mirror_failover.py  test_node_provision.py  test_onboarding_link.py  test_serverless_db_path.py  test_static_bucket_targets.py  test_target_deploy_engine.py  test_target_locations.py  test_target_orchestration.py  test_targetslib.py  test_vault_cp_e2e.py  test_vaultlib.py
host/cli/: pyproject.toml
host/cli/homebox_cli/: config.py  main.py  network.py  ssh.py  traefik.py
(+80 files in other folders)
