[project]
name = "homebox-admin"
version = "0.1.0"
description = "Homebox admin UI/API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "cryptography>=43",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
]
